<resources>
    <string name="app_name">Navigation View</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent Mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="accesories_string">Accesories</string>
    <string name="bags_string">Bags</string>
    <string name="beauty_string">Beauty</string>
    <string name="blazers_string">Blazers</string>
    <string name="coats_string">Coats</string>
    <string name="denim_string">Denim</string>
    <string name="dresses_string">Dresses</string>
</resources>
